fix image issue on small screen

--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,7 @@ button {
 
 .mb-img {
   width: 100%;
+  /* margin-right: 0; */
 }
 
 .container {
@@ -163,7 +164,6 @@ render using javascript
   opacity: 0.7;
 }
 
-
 /* hover states */
 input:focus {
   color: var(--charcoal-grey);
@@ -209,6 +209,7 @@ input:focus {
 
   .mb-container {
     display: none;
+    width: 100%;
   }
 
   .container {
@@ -231,11 +232,19 @@ input:focus {
   }
 
   .btn {
-    width: 90%
+    width: 90%;
   }
 
   .btn-success {
     margin-top: 2em;
     width: 90%;
+  }
+}
+
+
+@media (min-width: 370px) and (max-width: 550px) {
+
+  .mb-img {
+    width: 150vw;
   }
 }
